fix: adjust dark mode color

--- a/app/components/Header/styles.module.css
+++ b/app/components/Header/styles.module.css
@@ -25,7 +25,7 @@
 	animation: dropdown 0.5s ease-in-out;
 	transition: transform 0.5s ease-in-out;
 
-	background: rgba(255, 255, 255, 0.2);
+	background: var(--color-secondary);
 	backdrop-filter: blur(5px);
 	-webkit-backdrop-filter: blur(5px);
 }
